k8resources/pttg-family-migration-fm-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pttg-income-proving-fm-ui
  name: pttg-income-proving-fm-ui
spec:
  type: NodePort
  ports:
  - name: https
    port: 443
    targetPort: https
    nodePort: ${pttg_income_proving_fm_ui_port}
  selector:
    name: pttg-income-proving-fm-ui
