k8resources/pttg-ip-fm-ui-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: pttg-ip-fm-ui
  name: pttg-ip-fm-ui
spec:
  type: NodePort
  ports:
  - name: https
    port: 443
    targetPort: https
    nodePort: ${pttg_ip_fm_ui_port}
  - name: http
    port: 80
  selector:
    name: pttg-ip-fm-ui
